Fixed some styling for product output - no more weird top gap

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -315,6 +315,7 @@ div#contact{
   margin: auto;
   padding: 100px;
   text-align: center;
+  margin-top: -100px;
 }
 
 .image {
